# openticket

./: .gitignore  esbuild.config.mjs  manage.py  meson.build  package.json  pyproject.toml
assets/js/home/: index.js
assets/js/lib/: math.js
assets/js/settings/: settings.js
frontend/: base.scss
frontend/home/: index.js  index.scss
openticket/: __init__.py  cli.py  event_views.py  jinja2.py  lib.py  models.py  settings.py  urls.py  views.py
openticket/jinja2/: index.html  index.html.j2
openticket/jinja2/events/: detail.html.j2  index.html  index.html.j2  new.html.j2
openticket/jinja2/events/htmx/: _edit.html.j2
openticket/lib/: __init__.py  events_service.py  view_shortcuts.py
openticket/management/commands/: devserver.py
openticket/migrations/: 0001_initial.py
