[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openticket"
version = "0.1.0"
dependencies = [
	"django",
	"gunicorn",
	"pydantic",
	"click",
	"toml",
	"django_extensions",
]

[tool.setuptools]
py-modules = ["openticket"]

[project.optional-dependencies]
dev = ["django-types", "black"]

[tool.pyright]
exclude                = ["**/node_modules", "**/__pycache__"]
include                = ["src"]
typeCheckingMode = "strict"
reportMissingImports   = true
reportMissingTypeStubs = true
reportGeneralTypeIssues = true
reportPrivateImportUsage = "information"
reportUnusedFunction = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportImportCycles = true

pythonPlatform = "Linux"
pythonVersion  = "^3.8"

[project.scripts]
openticket= "openticket.manage:main"
