[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openticket"
version = "0.1.0"
dependencies = [
	"django>=4.2,<4.3",
	"gunicorn",
	"pydantic>=2.7,<2.8",
	"click",
	"toml",
	"django_extensions",
	"jinja2>=3.1,<3.2",
]

[tool.setuptools]
py-modules = ["openticket"]

[project.optional-dependencies]
dev = ["django-types", "black", "pywatchman"]

[tool.basedpyright]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
reportMissingImports   = true
reportMissingTypeStubs = true
reportGeneralTypeIssues = true
reportPrivateImportUsage = "information"
reportUnusedFunction = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportImportCycles = true

pythonPlatform = "Linux"
pythonVersion  = "3.8"
venvPath = "."
venv = ".venv"

[project.scripts]
openticket= "openticket.manage:main"
