[project]
name = "openticket"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
	"django>=4.2,<4.3",
	"gunicorn",
	"pydantic>=2.7,<2.8",
	"click",
	"toml",
	"django_extensions",
	"jinja2>=3.1,<3.2",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
openticket = { path = ".", editable = true }

[project.optional-dependencies]
dev = ["django-types", "black", "pywatchman"]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openticket*"]
# scanning for namespace packages is true by default in pyproject.toml, so
# you need NOT include this configuration.
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.html", "*.html.j2", "*.css", "*.js"]

[tool.basedpyright]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true
reportGeneralTypeIssues = true
reportPrivateImportUsage = "information"
reportUnusedFunction = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportImportCycles = true

pythonPlatform = "Linux"
pythonVersion  = "3.8"
venvPath = "."
venv = ".venv"

[project.scripts]
openticket= "openticket.manage:main"
